@@ -10,12 +10,6 @@
  *  See terms of license at gnu.org.                                     *
  *                                                                       *
  *************************************************************************/
-
-/**
- * Test class for RSA key validator functional methods, see {@link RsaKeyValidator}.
- *
- * @version $Id$
- */
 package org.cesecore.keys.validation;
 
 import static org.junit.Assert.assertEquals;
@@ -42,7 +36,7 @@ import org.junit.BeforeClass;
 import org.junit.Test;
 
 /**
- * Tests RSA key validator functions.
+ * Tests RSA key validator functions, see {@link RsaKeyValidator}.
  *
  * @version $Id$
  */
@@ -210,7 +204,7 @@ public class RsaKeyValidatorTest {
         keyValidator.setPublicKeyModulusMinFactor(2);
         keyValidator.setPublicKeyModulusMinFactor(-4);
         Assert.assertEquals("Test should not fail, validator field can not be set to a negative value ",
-                keyValidator.getPublicKeyModulusMinFactor(), new Integer("2"));
+                keyValidator.getPublicKeyModulusMinFactor(), Integer.valueOf(2));
         log.trace("<testNoNegativeNumbers()");
    }
 
@@ -366,12 +360,12 @@ public class RsaKeyValidatorTest {
                 "rsa-parameter-validation-test-1", "Description", null, -1, null, -1, -1, new Integer[] {});
         keyValidator.setSettingsTemplate(KeyValidatorSettingsTemplate.USE_CUSTOM_SETTINGS.getOption());
         // Set custom bit length.
-        List<String> bitLengths = new ArrayList<String>();
+        List<String> bitLengths = new ArrayList<>();
         bitLengths.add(Integer.toString(modulus.bitLength()));
         keyValidator.setBitLengths(bitLengths);
         List<String> messages = keyValidator.validate(publicKey, null);
         log.trace("Key validation error messages: " + messages);
-        Assert.assertTrue("Key validation should have been successful.", messages.size() == 0);
+        Assert.assertTrue("Key validation should have been successful.", messages.isEmpty());
 
         // A-2: Test RSA key validation failed RSA parameter bounds with even parameters.
         modulus = BigInteger.valueOf(16);
@@ -382,7 +376,7 @@ public class RsaKeyValidatorTest {
         keyValidator.setPublicKeyModulusMin(modulus.add(BigInteger.ONE));
         keyValidator.setPublicKeyModulusMax(modulus.subtract(BigInteger.ONE));
         keyValidator.setPublicKeyModulusOnlyAllowOdd(true);
-        bitLengths = new ArrayList<String>();
+        bitLengths = new ArrayList<>();
         bitLengths.add(Integer.toString(modulus.bitLength()));
         keyValidator.setBitLengths(bitLengths);
         messages = keyValidator.validate(publicKey, null);
@@ -453,7 +447,7 @@ public class RsaKeyValidatorTest {
         keyValidator.setPublicKeyModulusDontAllowRocaWeakKeys(false);
 
         // With disabled validation of ROCA, everything should pass
-        List<String> bitLengths = new ArrayList<String>();
+        List<String> bitLengths = new ArrayList<>();
         bitLengths.add("1024");
         bitLengths.add("2048");
         bitLengths.add("2050"); // The positive sample ROCA cert is 2050 bits
